--- a/Personal blog website/index.html
+++ b/Personal blog website/index.html
@@ -24,7 +24,7 @@
                 <!-- <a href="#experience-section">Experience</a> -->
                 <a href="#projects-section">Projects</a>
                 <a href="#skills-section">Skills</a>
-                <a href="#leave-message-section">Leave a Message!</a>
+                <a href="#form">Leave a Message!</a>
             </div>
         </nav>
     </header>
