--- a/Personal blog website/index.html
+++ b/Personal blog website/index.html
@@ -91,12 +91,12 @@
                 <div class="swiper-slide">
                     <a href="https://github.com/a1frmthe8?tab=repositories" target="_blank" class="project-box">
                         <picture>
-                            <source srcset="assets/images/webp/work-in-progress.webp" type="image/webp">
-                            <img src="assets/images/work-in-progress.png" alt="">
+                            <source srcset="assets/images/webp/spiderman-heart.webp" type="image/webp">
+                            <img src="assets/images/spiderman-heart.png" alt="">
                         </picture>
-                        <h4>Work in progress</h4>
-                        <h5><em>Coming soon</em></h5>
-                        <p></p>
+                        <h4>Spiderman valentines cards</h4>
+                        <h5><em>Html, Css, Javascript</em></h5>
+                        <p>I created a little valentine's gift for my girlfriend because I was away using simple html, css and javascript</p>
                     </a>
                 </div>
                 <div class="swiper-slide">
