--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -170,7 +170,7 @@
                 </div>
                 
                 <div class="iterm-body" id="terminalBody">
-                    <div class="output">Last login: Sat May 31 14:23:17 on ttys000</div>
+                    <div id= "timeoutput" class="output">Last login: Sat May 31 14:23:17 on ttys000</div>
                     
                     <div class="terminal-line">
                         <span class="prompt">adam@MacBook-Pro ~ %</span>
@@ -355,6 +355,6 @@ Feel free to explore my projects and get in touch if you'd like to collaborate!<
     <script src="js/terminal.js"></script>
     <script src="js/projects.js"></script>
     <script src="js/form.js"></script>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
