Added theme switch on the right side of the navbar

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -47,6 +47,10 @@
         <a href="#skills" class="nav-link">Skills</a>
         <a href="#terminal" class="nav-link">Terminal</a>
         <a href="#contact" class="nav-link">Contact</a>
+        <label class="theme-switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider"></span>
+        </label>
     </nav>
 
     <!-- About Section -->
@@ -355,6 +359,7 @@ Feel free to explore my projects and get in touch if you'd like to collaborate!<
     <script src="js/terminal.js"></script>
     <script src="js/projects.js"></script>
     <script src="js/form.js"></script>
+    <script src="js/theme-switch.js"></script>
     <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
