--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -266,7 +266,7 @@ Feel free to explore my projects and get in touch if you'd like to collaborate!<
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="m22 2-7 20-4-9-9-4 20-7z"/>
                             </svg>
-                            <span>adamplay81@gmail.com</span>
+                            <span>adam@portfolio.dev</span>
                         </div>
                         <div class="contact-method">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -274,13 +274,13 @@ Feel free to explore my projects and get in touch if you'd like to collaborate!<
                                 <rect width="4" height="12" x="2" y="9"/>
                                 <circle cx="4" cy="4" r="2"/>
                             </svg>
-                            <span>linkedin.com/in/adam-abdalla-abdou-428778275/</span>
+                            <span>linkedin.com/in/adam-dev</span>
                         </div>
                         <div class="contact-method">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/>
                             </svg>
-                            <span>github.com/a1frmthe8</span>
+                            <span>github.com/adam-dev</span>
                         </div>
                     </div>
                 </div>
