--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,7 +15,10 @@
         <div class="parallax"></div>
         <div class="hero-text">
             <h1>I am Adam</h1>
-            <p>Full-Stack Web Developer & UI/UX Designer</p>
+            <p>
+                <span id="typewriter"></span>
+                <span class="typewriter-cursor">|</span>
+            </p>
             <div class="hero-stats">
                 <div class="stat">
                     <span class="stat-number" data-target="5">0</span>
@@ -360,6 +363,7 @@ Feel free to explore my projects and get in touch if you'd like to collaborate!<
     <script src="js/projects.js"></script>
     <script src="js/form.js"></script>
     <script src="js/theme-switch.js"></script>
+    <script src="js/typewriter.js"></script>
     <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
