--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -289,7 +289,7 @@ Feel free to explore my projects and get in touch if you'd like to collaborate!<
                 </div>
                 
                 <div class="form" id="form">
-                    <form id="contactForm" action="action_page.php" method="post">
+                    <form id="contactForm" action="https://formspree.io/f/xgvynbwr" method="POST">
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="fname">First Name</label>
