--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -330,7 +330,8 @@ Feel free to explore my projects and get in touch if you'd like to collaborate!<
                             <label for="subject">Project Details</label>
                             <textarea name="subject" id="subject" placeholder="Tell me about your project, goals, timeline, and budget..." style="height:120px" required></textarea>
                         </div>
-
+                        
+                        <div class="g-recaptcha" data-sitekey="6LfL-2wrAAAAAMywPek6xNmok16oGOaYirkVXCAj"></div>
                         <button type="submit" class="submit-button">
                             <span>Send Message</span>
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -364,6 +365,7 @@ Feel free to explore my projects and get in touch if you'd like to collaborate!<
     <script src="js/form.js"></script>
     <script src="js/theme-switch.js"></script>
     <script src="js/typewriter.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
